src/modules/customizable-menu.module/module.css
.custom-menu__top {
  background-color: red;
  display: flex;
  gap: 1.5rem;
}

.custom-menu__top-level-item {
  border-bottom: 4px solid transparent;
  color: #202225;
  font-size: 14px;
  line-height: 24px;
  padding: 16px 0 12px;
}

/* Menu */

.menu--custom {
  display: block;
}

.menu--mobile {
  display: none;
}

.menu__wrapper {
  gap: 2rem;
}

@media (max-width: 767px) {
  /* .menu--desktop {
    display: none;
  } */

  .menu--mobile {
    display: block;
  }

  .menu--custom > ul.no-list {
    flex-direction: column;
  }

  .menu__wrapper {
    gap: 0;
  }
}

/* Menu items */

.logo--show-scroll {
  display: none;
}

@media screen and (max-width: 767px) {
  .logo--show-scroll {
    display: none;
  }
}

.menu__item {
  position: relative;
}

.menu__link {
  font-size: 14px;
  line-height: 24px;
  text-decoration: none;
}

.menu__link:hover,
.menu__link:focus,
.menu__link:active {
  text-decoration: none;
  font-weight: 600;
}

.menu__link--active-link,
.menu__link--active-branch {
  font-weight: bold;
}

@media (min-width: 768px) and (max-width: 1150px) {
  .menu__link {
    font-size: 0.833rem;
  }
}

@media (max-width: 767px) {
  .menu__item {
    display: block;
    width: 100%;
  }

  .menu__link {
    display: block;
    font-size: 1.083rem;
  }
}

/* Menu items - top level */

.menu__item--depth-1 {
  align-items: center;
  display: inline-flex;
  padding: 1rem 2px;
  white-space: nowrap;
  width: fit-content;
}

.menu__item--depth-1:first-child {
  padding-left: 0;
}

.menu__item--depth-1 > .menu__link--active-link:after {
  bottom: -3px;
  content: '';
  height: 2px;
  left: 0;
  position: absolute;
  width: 100%;
}

@media (max-width: 767px) {
  .menu__item--depth-1 {
    border-top: 1px solid #DFE4E9;
    padding: 10px 0;
    white-space: unset;
    width: 100%;
  }

  .menu__item {
    border-bottom: none;
  }

  .menu__item--open {
    border-color: revert;
  }

  .menu__item--has-submenu.menu__item--products {
    border-top: none;
  }

  .menu__item--depth-1 > .menu__link {
    padding: 0.5rem;
  }

  .menu__item--depth-1 > .menu__link--active-link:after {
    content: none;
  }
}

/* Menu items - submenus */

.menu__submenu {
  border: none;
  display: none;
  height: 0;
  left: 0;
  position: absolute;
  text-align: left;
  text-transform: none;
  top: 100%;
  transition: all 0.3s ease-in-out;
  width: 0;
  z-index: 99;
}

.menu__item {
  border-bottom: 4px solid transparent;
  transition: all 0.2s ease;
}

.menu__item--open {
  border-color: #00B9BC;
}

.menu__item--open > .menu__submenu--level-2 {
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: 2px solid #EFF3F7;
  display: flex;
  flex-direction: column;
  height: fit-content;
  list-style: none;
  margin: 4px auto 0;
  padding: 2.5rem 3.25rem;
  width: clamp(800px, 80vw, 1440px);
}

.menu__item--products > .menu__submenu--level-2 {
  flex-direction: column-reverse;
}

.hs-menu-depth-1 {
  padding: 0.6rem 1rem;
}

.hs-menu-depth-1 > a {
  border-bottom: 2px solid transparent;
  padding-bottom: 4px;
  transition: all 0.3s ease;
}

.hs-menu-depth-1 > a:hover {
  border-bottom: 2px solid #00B9BC;
  filter: brightness(100%);
}

@media screen and (max-width: 767px) {
  .hs-menu-wrapper.hs-menu-flow-horizontal .dropdown-links-menu {
    background-color: #FFF;
    flex-direction: row;
    justify-content: center;
    padding-right: 5%;
  }
}

/* Keeps the first menu item's drop down menu aligned to the left of the top level menu item */

.menu__item--depth-1:first-child .menu__submenu--level-2 {
  transform: unset;
}

.menu__item--depth-1:nth-child(4) .menu__submenu--level-2 {
  transform: translateX(-14%);
}

.menu__item--depth-1:nth-child(5) .menu__submenu--level-2 {
  transform: translateX(-27%);
}

.menu__item--depth-1:nth-child(6) .menu__submenu--level-2 {
  transform: translateX(-37%);
}

.menu__item--depth-1:nth-child(7) .menu__submenu--level-2 {
  transform: translateX(-46%);
}

.menu__submenu--main-link {
  align-items: center;
  border-bottom: 2px solid transparent;
  display: inline-flex;
  grid-row: 1;
  grid-column: 1;
  margin-bottom: 2.5rem;
  max-width: fit-content;
  padding: 1px;
  transition: all 0.2s ease;
}

.menu__submenu--main-link:hover {
  border-bottom: 2px solid #00B9BC;
  filter: brightness(100%);
}

.menu__wrapper--level-2 {
  display: flex;
  justify-content: space-between;
}


.client-cases {
  flex-wrap: wrap;
}

.menu__item--depth-2 {
  display: flex;
  flex-direction: column;
}

.client-cases > .menu__item--depth-2 {
  max-width: 31%;
  margin-bottom: 2.25rem;
}

.client-cases > .menu__item--depth-2 > .menu__link {
  border-bottom: 1px solid #DFE4E9;
  color: #0F1E2D !important;
  font-size: 18px;
  line-height: 28px;
  padding-bottom: 8px;
  padding-left: 2px;
  transition: all 0.3s ease;
}

.client-cases > .menu__item--depth-2 > .menu__link:hover {
  border-color: #396D78;
  color: #396D78 !important;
}

.menu__submenu .menu__link--client-cases {
  color: #0F1E2D !important;
  font-size: 14px;
  font-weight: 400;
  line-height: 26px;
  padding: 8px 1px 0 !important;
  transition: all 0.2s ease;
}

.menu__link--client-cases:hover {
  color: #0F1E2D !important;
  font-weight: 600;
}

.menu__submenu--level-3 {
  border: none;
  display: flex;
  flex-direction: column;
  height: 100%;
  left: 0;
  list-style: none;
  padding: 0;
  position: relative;
  top: 0;
  width: fit-content;
}

.menu__submenu--products > .menu__wrapper--level-3 {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  height: 100%;
}

.products {
  gap: 30px;
  margin-bottom: 24px;
}

.products > .menu__item--depth-2 span:not(.header-card) {
  padding-left: 1px;
}

.products > .menu__item--depth-2:first-child {
  width: 390px;
}

.products > .menu__item--depth-2:nth-child(2) {
  width: calc(100% - 420px);
}

.menu__item--depth-3 > a {
  color: #0F1E2D;
  font-size: 18px;
  line-height: 28px;
  padding: 1rem 0;
}
/* ... */

